--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="https://www.google.ca/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjX2qSljILVAhULeD4KHdwnBBsQjRwIBw&url=https%3A%2F%2Fgiphy.com%2Fsearch%2Fdoot&psig=AFQjCNEVCagyRXs-zrywgyNa4oRfXQfwrg&ust=1499892270443943" alt="doot">
+                    <img class="img-responsive" src="https://image.spreadshirtmedia.com/image-server/v1/compositions/102304017/views/1,width=300,height=300,appearanceId=4,backgroundColor=E8E8E8,version=1485256808/skull-trumpet-dark-t-shirts-men-s-t-shirt.jpg" alt="doot">
                     <div class="intro-text">
                         <h1 class="name">Quinn Gardin</h1>
                         <hr class="star-light">
